--- a/examples/tcp/service-proxy.yaml
+++ b/examples/tcp/service-proxy.yaml
@@ -12,7 +12,7 @@ spec:
       labels:
         application: tcp-echo-proxy
     spec:
-      serviceAccountName: myrouter
+      serviceAccountName: icproxy
       containers:
       - name: proxy
         env:
