--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "url": "http://github.com/grs/icproxy"
     },
     "dependencies": {
+        "js-yaml": "*",
         "debug": "*",
         "rhea": "*"
     }
