--- a/examples/http/deployment.yaml
+++ b/examples/http/deployment.yaml
@@ -14,5 +14,5 @@ spec:
     spec:
       containers:
       - name: simple
-        image: quay.io/gordons/simple-http
+        image: quay.io/skupper/simple-http
         imagePullPolicy: IfNotPresent
