--- a/examples/tcp/deployment.yaml
+++ b/examples/tcp/deployment.yaml
@@ -14,5 +14,5 @@ spec:
     spec:
       containers:
       - name: echo
-        image: quay.io/gordons/tcp-echo
+        image: quay.io/skupper/tcp-echo
         imagePullPolicy: IfNotPresent
