--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "license": "Apache-2.0",
     "repository": {
         "type": "git",
-        "url": "http://github.com/grs/icproxy"
+        "url": "http://github.com/skupperproject/proxy"
     },
     "dependencies": {
         "debug": "*",
